reemplazo de views

--- a/views/asignatura/new.jade
+++ b/views/asignatura/new.jade
@@ -124,8 +124,7 @@ block content
                                     notEmpty: {
                                     },
                                     stringLength: {
-                                        min: 3,
-                                        max: 30
+                                        min: 6
                                     }
                                 }
                             },
